--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,21 +1,14 @@
 workflows:
   android-workflow:
-    name: Android Debug APK
+    name: Android Free Build
     max_build_duration: 60
-    instance_type: linux_x2
+    instance_type: linux   # 👈 FREE Linux instance
     environment:
-      vars:
-        JAVA_VERSION: 17
+      java: 17
     scripts:
-      - name: Grant execute permission for gradlew
-        script: chmod +x ./gradlew || true
-
-      - name: Build debug APK
-        script: |
-          if [ -f "./gradlew" ]; then
-            ./gradlew assembleDebug
-          else
-            gradle assembleDebug
-          fi
+      - name: Grant execute permission
+        script: chmod +x ./gradlew
+      - name: Build Debug APK
+        script: ./gradlew assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
