--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,13 +2,12 @@ workflows:
   android-workflow:
     name: Android Free Build
     max_build_duration: 60
-    instance_type: linux   # 👈 FREE Linux instance
     environment:
       java: 17
     scripts:
       - name: Grant execute permission
         script: chmod +x ./gradlew
       - name: Build Debug APK
-        script: ./gradlew assembleDebug
+        script: ./gradlew :app:assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
